fixtures/errors/eval_strict_var_leak.js
"use strict";
eval("var x = 1;");
console.log(x);
