fixtures/errors/eval_strict_var_leak.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: undeclared identifier `x`
 --> errors/eval_strict_var_leak.js:3:13
3 | console.log(x);
  |             ^

